# clash-schedule-change-proxy-tool

./: .gitignore  README.md  ajiasu_api.py  ajiasu_bridge.js  ajiasu_detector.py  ajiasu_injector.py  ajiasu_patcher.py  build.spec  clash_api.py  clash_detector.py  config.py  gui.py  i18n.py  main.py  proxy_checker.py  pyproject.toml  requirements.txt  scheduler.py  win_admin.py
.claude/: settings.local.json
.github/workflows/: build.yml
bridge_inject/: CMakeLists.txt  bridge_resource.rc  sciter_bridge.cpp
docs/: AJIASU_MODE.md
scripts/: build_mac.sh  build_windows.bat
