[project]
name = "clash-proxy-timer"
version = "1.1.1"
description = "A cross-platform GUI tool for automatically switching Clash proxies at scheduled intervals"
authors = [{name = "fengyiyang"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["clash", "proxy", "timer", "gui", "clash-verge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "customtkinter>=5.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
interval-proxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# 开发依赖（包含打包工具）
[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
